--- a/ARMV8/Centralized Learning/Client/Dockerfile
+++ b/ARMV8/Centralized Learning/Client/Dockerfile
@@ -10,14 +10,19 @@ ENV ROUNDS_ENV=${communication_rounds}
 COPY requirements.txt /opt/app/requirements.txt
 WORKDIR /opt/app
 
-RUN apt-get -y install python3 python3-pip python-dev python3-dev \
-     libssl-dev libffi-dev python3-cffi python3-numpy libatlas-base-dev \
+RUN apt-get update
+RUN apt-get upgrade
+RUN apt-get -y install python3-dev build-essential apt-utils swig graphviz-dev\
+     libssl-dev libffi libffi-dev python3-cffi python3-numpy libatlas-base-dev \
+     libc-dev g++  libxml2 unixodbc-dev portaudio19-dev python3-lxml\
      libxml2-dev libxslt1-dev zlib1g-dev gcc libpq-dev python3-wheel \
      autoconf libtool pkg-config python-opengl python-pil python-pyrex  idle-python2.7 \
+     python-imaging python-pyside.qtopengl libicu-dev .build-deps musl-dev\
      qt4-dev-tools qt4-designer libqtgui4 libqtcore4 libqt4-xml libqt4-test libqt4-script libqt4-network libqt4-dbus\
     python-qt4 python-qt4-gl libgle3  libopus-dev libvpx-dev libsrtp2-dev
 RUN apt-get -y install libpq-dev  libldap2-dev libsasl2-dev libavdevice-dev libavfilter-dev libcurl4-gnutls-dev librtmp-dev\
-    libpng-dev libjpeg-dev gfortran
+    libpng-dev libjpeg-dev libvirt-dev libsqlite3-dev libcurl4-openssl-dev gfortran \
+    linux-headers build-base git openssl-dev
     
 RUN pip install -r requirements.txt
 COPY . /opt/app
