--- a/ARMV8/Federated Learning/Server/requirements.txt
+++ b/ARMV8/Federated Learning/Server/requirements.txt
@@ -1,8 +1,7 @@
-
 aiortc==0.9.28
-pandas == 1.0.5
-numpy == 1.18.5
-matplotlib
-syft 
+pandas 
+numpy
+syft
+matplotlib 
 psutil == 5.7.0
 skorch == 0.8.0
