working with pytorch 1.4.0

--- a/ARMV8/Python/Pytorch/Dockerfile
+++ b/ARMV8/Python/Pytorch/Dockerfile
@@ -1,6 +1,6 @@
 #!/bin/bash
 #Set the base image
-FROM arm64v8/python:3-slim
+FROM arm64v8/python:3.6-slim
 
 ARG communication_rounds
 ARG n_clients
@@ -33,8 +33,9 @@ RUN apt-get install -y \
     libavutil-dev libswscale-dev libswresample-dev libavfilter-dev \
     libgle3  libopus-dev libvpx-dev libsrtp2-dev
 
-RUN pip install cython hypothesis pyyaml pillow six
-
+RUN pip install cython hypothesis pyyaml six
+RUN pip install  Pillow==6.2.2
+RUN pip install numpy==1.18.5
 RUN echo $(which g++-8)
 RUN echo $(CXX)
 #ENV CC=$/usr/bin/gcc-8
@@ -49,12 +50,17 @@ ENV BUILD_TEST=0
 
 WORKDIR /app
 # clone repo and build torch
-RUN git clone --branch v1.7.0 https://github.com/pytorch/pytorch.git  pytorch-1.7.0 && echo $(ls) && cd pytorch-1.7.0 && git submodule update --init --recursive && \
-    pip install -r requirements.txt && python -E setup.py install
+RUN git clone --branch v1.4.0a0 https://github.com/pytorch/pytorch.git  pytorch-1.4.0 && echo $(ls) && cd pytorch-1.4.0 && git submodule sync && git submodule update --init --recursive && \
+    pip install -r requirements.txt && python -E setup.py bdist_wheel
 
+#RUN echo $(ls /app/pytorch-1.4.0/dist)
+RUN mv /app/pytorch-1.4.0/dist/torch-1.4.0a0+2c51e06-cp36-cp36m-linux_aarch64.whl  /app/pytorch-1.4.0/dist/torch-1.4.0-cp36-cp36m-linux_aarch64.whl
+RUN pip3 install /app/pytorch-1.4.0/dist/torch-1.4.0-cp36-cp36m-linux_aarch64.whl
+#RUN pip3 install https://mathinf.eu/pytorch/arm64/torch-1.3.0a0-cp37-cp37m-linux_aarch64.whl
+#RUN pip3 install  https://mathinf.eu/pytorch/arm64/torchvision-0.5.0a0-cp37-cp37m-linux_aarch64.whl
 # copy built modules to site packages (for some reason, the built modules were not copied to site packages)
-RUN echo $(/app/pytorch-1.7.0/build)
-RUN cp -r /app/pytorch-1.7.0/build/lib.linux-aarch64-3.9/* /usr/local/lib/python3.9/site-packages/
+#RUN echo $(ls /app/pytorch-1.4.0/build)
+RUN cp -r /app/pytorch-1.4.0/build/lib.linux-aarch64-3.6/* /usr/local/lib/python3.6/site-packages/
 
 RUN echo $(python -c "import torch")
 
@@ -63,15 +69,17 @@ RUN echo $(python -c "import torch")
 RUN git clone --recursive https://github.com/pytorch/vision && cd vision && git checkout v0.5.0 && python3 setup.py install
 
 #RUN apt-get install -y  pkg-config libffi-dev  libssl-dev
-#RUN apt-get install -y \
-#    libavformat-dev libavcodec-dev libavdevice-dev libstdc++6 \
-#    libavutil-dev libswscale-dev libswresample-dev libavfilter-dev \
-#    libgle3  git libopus-dev libvpx-dev libsrtp2-dev
+
 RUN python3 -m pip install av
 #Installing pip requirements
 COPY requirements.txt requirements.txt
-
+#RUN pip install numpy==1.16.5
 RUN pip install -r requirements.txt
+
+
+#RUN git clone https://github.com/OpenMined/PySyft.git && cd PySyft && git checkout v0.2.6 && echo $(ls)  && python3 setup.py install
+RUN pip3 install tblib syft_proto websocket websockets phe
+RUN pip3 install --no-dependencies syft==0.2.6
 
 #creates work dir
 #copy python script to the container folder app
