--- a/ARMV8/Python/Federated Learning/Client/requirements.txt
+++ b/ARMV8/Python/Federated Learning/Client/requirements.txt
@@ -1,7 +1,6 @@
-aiortc==0.9.28
-pandas == 1.0.5
-numpy == 1.18.5
+aiortc
+pandas 
 matplotlib
-syft 
-psutil == 5.7.0
-skorch == 0.8.0
+psutil
+skorch 
+seaborn
