adding the right client code

--- a/ARMV8/Python/Federated Learning/Client/Dockerfile
+++ b/ARMV8/Python/Federated Learning/Client/Dockerfile
@@ -34,8 +34,8 @@ ENV LD_LIBRARY_PATH=/usr/lib/aarch64-linux-gnu/openblas/libblas.so
 #creates work dir   
 WORKDIR /app
 
-RUN  python3 -m pip install https://github.com/liasucf/Auxiliar/blob/main/torch-1.4.0-cp36-cp36m-linux_aarch64.whl
-RUN  python3 -m pip install https://github.com/liasucf/Auxiliar/blob/main/torchvision-0.5.0-cp36-cp36m-linux_aarch64.whl
+RUN  python3 -m pip install https://github.com/liasucf/Auxiliar/raw/main/torch-1.4.0-cp36-cp36m-linux_aarch64.whl
+RUN  python3 -m pip install https://github.com/liasucf/Auxiliar/raw/main/torchvision-0.5.0-cp36-cp36m-linux_aarch64.whl
 RUN python3 -m pip install av
 
 COPY requirements.txt requirements.txt
@@ -48,6 +48,7 @@ RUN pip3 install --no-dependencies syft==0.2.6
 COPY client_fed_lstm.py client_fed_lstm.py
 ADD Data Data/
 RUN chmod +x client_fed_lstm.py
-
+RUN echo $(ls)
+RUN echo $(ls Data)
 
 CMD python client_fed_lstm.py $DATA_ENV $ROUNDS_ENV
